--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="kati_black">#343434</color>
+    <color name="kati_gray">#B9B9B9</color>
+    <color name="kati_light_gray">#F4F4F4</color>
+    <color name="kati_dark_gray">#444444</color>
+    <color name="kati_red">#E53154</color>
 </resources>
