--- a/app/src/main/res/layout/activity_id_find.xml
+++ b/app/src/main/res/layout/activity_id_find.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".kati.signUp.welcome.WelcomeFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="디자인 필요" />
+    tools:context=".kati.idFind.IdFindActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
