--- a/app/src/main/res/layout/activity_sign_out.xml
+++ b/app/src/main/res/layout/activity_sign_out.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/kati_light_gray"
-    tools:context=".katiDomain.main.SignOutActivity">
+    tools:context=".kati.signOut.SignOutActivity">
 
     <com.example.katiui.jshCrossDomain.JSHToolBar
-        android:id="@+id/main_toolbar"
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:button_image="@drawable/ic_baseline_close_24"
+        app:button_image="@drawable/jsh_close"
         android:background="@color/white"
         android:elevation="5dp"
         app:title="회원탈퇴" />
@@ -27,7 +27,7 @@
         android:textSize="15sp"
         android:textColor="@color/black"
         android:background="@color/kati_light_gray"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
         tools:layout_editor_absoluteX="95dp" />
     <TextView
         android:id="@+id/textView6"
@@ -139,7 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="회원탈퇴하기"
-            android:backgroundTint="@color/kati_gray"
+            android:backgroundTint="@color/kati_middle_gray"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
