--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,11 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".katiDomain.main.view.MainFragment"
+    tools:context=".kati.main.home.HomeFragment"
     >
 
     <com.example.katiui.jshCrossDomain.JSHToolBar
-        android:id="@+id/main_toolbar"
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +20,7 @@
         android:layout_marginHorizontal="8dp"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -59,7 +59,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <GridLayout
-        android:id="@+id/main_category"
+        android:id="@+id/home_category"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
@@ -68,7 +68,7 @@
         tools:layout_editor_absoluteX="16dp">
 
         <include
-            layout="@layout/item_main_category"
+            layout="@layout/item_home_category"
             android:layout_row="0"
             android:layout_rowWeight="1"
             android:layout_column="0"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content" />
 
         <include
-            layout="@layout/item_main_category"
+            layout="@layout/item_home_category"
             android:layout_row="0"
             android:layout_rowWeight="1"
             android:layout_column="1"
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content" />
 
         <include
-            layout="@layout/item_main_category"
+            layout="@layout/item_home_category"
             android:layout_row="0"
             android:layout_rowWeight="1"
             android:layout_column="2"
@@ -95,7 +95,7 @@
         android:layout_height="wrap_content" />
 
         <include
-            layout="@layout/item_main_category"
+            layout="@layout/item_home_category"
             android:layout_row="0"
             android:layout_rowWeight="1"
             android:layout_column="3"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content" />
 
         <include
-            layout="@layout/item_main_category"
+            layout="@layout/item_home_category"
             android:layout_row="1"
             android:layout_rowWeight="1"
             android:layout_column="0"
@@ -113,7 +113,7 @@
         android:layout_height="wrap_content" />
 
         <include
-            layout="@layout/item_main_category"
+            layout="@layout/item_home_category"
             android:layout_row="1"
             android:layout_rowWeight="1"
             android:layout_column="1"
@@ -122,7 +122,7 @@
         android:layout_height="wrap_content" />
 
         <include
-            layout="@layout/item_main_category"
+            layout="@layout/item_home_category"
             android:layout_row="0"
             android:layout_rowWeight="1"
             android:layout_column="4"
