--- a/app/src/main/res/layout/fragment_my_info_edit.xml
+++ b/app/src/main/res/layout/fragment_my_info_edit.xml
@@ -5,38 +5,60 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/kati_light_gray"
-    tools:context=".katiDomain.main.view.MyInfoEditFragment">
+    tools:context=".kati.main.myKati.myInfoEdit.MyInfoEditFragment">
 
     <com.example.katiui.jshCrossDomain.JSHToolBar
-        android:id="@+id/main_toolbar"
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:button_image="@drawable/ic_baseline_navigate_before_24"
+        app:button_image="@drawable/jsh_before"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/white"
         android:elevation="5dp"
         app:title="내 정보 수정" />
 
     <com.example.katiui.jshCrossDomain.JSHInfoItem
-        android:id="@+id/JSHInfoItem"
+        android:id="@+id/myInfo_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:JSHInfoItem_content="SNS 계정에서 변경하실 수 있습니다."
         app:JSHInfoItem_title="비밀번호"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
+
+    <com.example.katiui.jshCrossDomain.JSHInfoItem
+        android:id="@+id/myInfo_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        app:JSHInfoItem_content="정상"
+        app:JSHInfoItem_title="닉네임"
+        app:layout_constraintTop_toBottomOf="@+id/myInfo_password" />
 
     <Button
         android:id="@+id/myInfoEditFragment_editPW"
         android:layout_width="57dp"
         android:layout_height="40dp"
+        android:layout_marginRight="16dp"
         android:backgroundTint="@color/white"
         android:text="변경"
-        android:layout_marginRight="16dp"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/JSHInfoItem"
+        app:layout_constraintBottom_toBottomOf="@+id/myInfo_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
+
+    <Button
+        android:id="@+id/myInfoEditFragment_editName"
+        android:layout_width="57dp"
+        android:layout_height="40dp"
+        android:layout_marginRight="16dp"
+        android:backgroundTint="@color/white"
+        android:text="변경"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/myInfo_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myInfo_password" />
 
     <TextView
         android:id="@+id/myinfo_logout_textView"
@@ -65,7 +87,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/JSHInfoItem" />
+        app:layout_constraintTop_toBottomOf="@+id/myInfo_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
