--- a/app/src/main/res/layout/fragment_mykati.xml
+++ b/app/src/main/res/layout/fragment_mykati.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <com.example.katiui.jshCrossDomain.JSHToolBar
-        android:id="@+id/main_toolbar"
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar">
 
         <TextView
             android:id="@+id/textView2"
@@ -77,12 +77,21 @@
         />
 
     <com.example.katiui.jshCrossDomain.JSHSelectItem
+        android:id="@+id/select_my_review"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        app:JSHSelectItem_title="리뷰 관리"
+        app:layout_constraintTop_toBottomOf="@+id/select_my_info_edit"
+        />
+
+    <com.example.katiui.jshCrossDomain.JSHSelectItem
         android:id="@+id/select_kati"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:JSHSelectItem_title="카티 안내"
         android:layout_marginTop="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/select_my_info_edit"
+        app:layout_constraintTop_toBottomOf="@+id/select_my_review"
         />
 
     <com.example.katiui.jshCrossDomain.JSHSelectItem
