--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/kati_light_gray"
-    tools:context=".katiDomain.main.SignUpActivity">
+    tools:context=".kati.signUp.SignUpActivity">
 
     <com.example.katiui.jshCrossDomain.JSHToolBar
-        android:id="@+id/main_toolbar"
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:button_image="@drawable/ic_baseline_close_24"
+        app:button_image="@drawable/jsh_close"
         app:title="회원가입"
         android:background="@color/white"
         android:elevation="5dp"/>
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
         tools:layout_editor_absoluteX="-86dp">
 
         <TextView
