--- a/app/src/main/res/layout/widget_toolbar.xml
+++ b/app/src/main/res/layout/widget_toolbar.xml
@@ -11,14 +11,15 @@
 
     <ImageView
         android:id="@+id/button_imageView"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+        app:srcCompat="@drawable/jsh_before"
         app:tint="@color/kati_black" />
 
     <TextView
@@ -28,6 +29,7 @@
         android:text="내 정보 수정"
         android:gravity="center"
         android:textSize="15sp"
+        android:layout_marginVertical="4dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
