--- a/app/src/main/res/navigation/sign_up_graph.xml
+++ b/app/src/main/res/navigation/sign_up_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/signUpFragment">
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.example.katiui.katiDomain.main.SignUpFragment"
+        android:name="com.example.katiui.kati.signUp.signUp.SignUpFragment"
         android:label="SignUpFragment"
         tools:layout="@layout/fragment_sign_up">
         <action
@@ -15,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/welcomeFragment"
-        android:name="com.example.katiui.katiDomain.main.WelcomeFragment"
+        android:name="com.example.katiui.kati.signUp.welcome.WelcomeFragment"
         android:label="fragment_welcome"
         tools:layout="@layout/fragment_welcome" />
 </navigation>
