--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="kati_black">#343434</color>
     <color name="kati_gray">#B9B9B9</color>
     <color name="kati_light_gray">#F4F4F4</color>
+    <color name="kati_middle_gray">#DDDDDD</color>
     <color name="kati_dark_gray">#444444</color>
     <color name="kati_red">#E53154</color>
+    <color name="kati_orange">#F08430</color>
 </resources>
