--- a/app/src/main/res/layout/activity_password_edit.xml
+++ b/app/src/main/res/layout/activity_password_edit.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/kati_light_gray"
-    tools:context=".kati.passwordEdit.PasswordEditActivity">
+    tools:context=".kati.editPassword.EditPasswordActivity">
 
     <com.example.katiui.jshCrossDomain.JSHToolBar
         android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:button_image="@drawable/jsh_close"
+        app:button_image="@drawable/jsh_before"
         app:title="비밀번호 변경"
         android:background="@color/white"
         android:elevation="5dp"/>
