--- a/app/src/main/res/layout/activity_password_find.xml
+++ b/app/src/main/res/layout/activity_password_find.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/kati_light_gray"
-    tools:context=".kati.passwordEdit.PasswordEditActivity">
+    tools:context=".kati.editPassword.EditPasswordActivity">
 
     <com.example.katiui.jshCrossDomain.JSHToolBar
         android:id="@+id/home_toolbar"
