--- a/app/src/main/res/layout/fragment_my_info_edit.xml
+++ b/app/src/main/res/layout/fragment_my_info_edit.xml
@@ -18,12 +18,21 @@
         app:title="내 정보 수정" />
 
     <com.example.katiui.jshCrossDomain.JSHInfoItem
+        android:id="@+id/myInfo_restoreEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:JSHInfoItem_content="sh199919@gmail.com"
+        app:JSHInfoItem_title="복구 이메일"
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
+
+    <com.example.katiui.jshCrossDomain.JSHInfoItem
         android:id="@+id/myInfo_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         app:JSHInfoItem_content="SNS 계정에서 변경하실 수 있습니다."
         app:JSHInfoItem_title="비밀번호"
-        app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/myInfo_restoreEmail" />
 
     <com.example.katiui.jshCrossDomain.JSHInfoItem
         android:id="@+id/myInfo_name"
@@ -45,7 +54,7 @@
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/myInfo_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/myInfo_restoreEmail" />
 
     <Button
         android:id="@+id/myInfoEditFragment_editName"
@@ -59,6 +68,19 @@
         app:layout_constraintBottom_toBottomOf="@+id/myInfo_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myInfo_password" />
+
+    <Button
+        android:id="@+id/myInfoEditFragment_editRestoreEmail"
+        android:layout_width="57dp"
+        android:layout_height="40dp"
+        android:layout_marginRight="16dp"
+        android:backgroundTint="@color/white"
+        android:text="변경"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/myInfo_restoreEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
 
     <TextView
         android:id="@+id/myinfo_logout_textView"
