--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="kati_middle_gray">#DDDDDD</color>
     <color name="kati_dark_gray">#444444</color>
     <color name="kati_red">#E53154</color>
+    <color name="kati_red_ripple">#F8CDD6</color>
     <color name="kati_orange">#F08430</color>
 </resources>
