--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -33,9 +33,9 @@
         tools:layout="@layout/fragment_my_info_edit" />
     <fragment
         android:id="@+id/reviewFlagment"
-        android:name="com.example.katiui.kati.main.myKati.review.ReviewFlagment"
+        android:name="com.example.katiui.kati.main.myKati.review.ReviewManagementFragment"
         android:label="fragment_review_flagment"
-        tools:layout="@layout/fragment_review_flagment" />
+        tools:layout="@layout/fragment_review_management" />
     <fragment
         android:id="@+id/allergyFragment"
         android:name="com.example.katiui.kati.main.myKati.allergy.AllergyFragment"
