--- a/app/src/main/res/layout/item_review_see_at_mykati.xml
+++ b/app/src/main/res/layout/item_review_see_at_mykati.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:layout_marginBottom="4dp">
+    android:layout_marginBottom="1dp">
 
     <TextView
         android:id="@+id/review_name"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/review_date" />
 
     <TextView
-        android:id="@+id/review_delete"
+        android:id="@+id/review_warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
