--- a/app/src/main/res/layout/item_review_see_at_food_info.xml
+++ b/app/src/main/res/layout/item_review_see_at_food_info.xml
@@ -22,7 +22,8 @@
         android:id="@+id/review_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="8dp"
+        android:textSize="12sp"
         android:text="2021.05.26"
         app:layout_constraintBottom_toBottomOf="@+id/review_name"
         app:layout_constraintStart_toEndOf="@+id/review_name"
