--- a/app/src/main/res/layout/item_review_see_at_food_info.xml
+++ b/app/src/main/res/layout/item_review_see_at_food_info.xml
@@ -46,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:textSize="17sp"
+        android:textSize="12sp"
+        android:padding="4dp"
         android:text="신고"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
