--- a/app/src/main/res/layout/item_review_see_at_mykati.xml
+++ b/app/src/main/res/layout/item_review_see_at_mykati.xml
@@ -45,7 +45,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:textSize="17sp"
+        android:textSize="12sp"
+        android:padding="4dp"
         android:text="삭제"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
